# agentRAG

./: .gitignore  CMakeLists.txt  LICENSE  LOG.md  PLAN.md  README-cn.md  README.md  TODO.md  pyproject.toml
configs/: default.yaml
docs/benchmarks/: retrieval_p1.csv
docs/learning/: 00_course_guide.md  01_rag_architecture.md  02_document_processing.md  03_embeddings.md  04_exact_vector_search.md  05_cpp_pybind_kmeans.md  06_residual_ivfpq.md  07_bm25.md  08_hybrid_rerank.md  09_prompt_generation_kv.md  10_agent.md  11_cli_integration.md  12_evaluation.md  13_quantization_preresearch.md  14_prefix_kv_preresearch.md  15_production_preresearch.md  README.md  _chapter_template.md  glossary.md  references.md
examples/: 01_basic_rag.py
examples/learning/: __init__.py  real_model_lab.py  run_lab.py
scripts/: benchmark_retrieval.py  build_cpp.bat  check_learning_docs.py
src/: __init__.py
src/agent/: __init__.py  loop.py  memory.py  tools.py
src/api/: __init__.py
src/cli/: main.py
src/core/: CMakeLists.txt
src/core/include/: bm25_index.h  ivf_index.h  ivf_pq_index.h  kmeans.h  product_quantizer.h  vector_types.h
src/core/pybind/: module.cpp
src/core/src/: bm25_index.cpp  hello.cpp  ivf_index.cpp  ivf_pq_index.cpp  kmeans.cpp  product_quantizer.cpp
src/document/: __init__.py  chunker.py  parser.py
src/embedding/: __init__.py  model.py
src/generation/: __init__.py  engine.py  kv_cache.py  prefix_cache.py  prompt.py
src/index/: __init__.py  hybrid.py  ivfpq_store.py  sparse_store.py  vector_store.py
src/retrieval/: __init__.py  pipeline.py  reranker.py  retriever.py  rewriter.py
src/utils/: __init__.py
test_data/: transformer_intro.md
tests/: test_benchmark_retrieval.py  test_ivfpq.py  test_learning_course.py  test_phase1.py  test_phase2_python.py  test_phase3.py  test_retrieval_pipeline.py
